RAMStressTest modifications